data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_766.wast
;; 7. **Test Description**:    Position `nop` instructions within `if` and `else` blocks around a `br_table`. Check if correct target selection happens as per control flow executed.      **Specific Constraint**: Control flow correctness with conditional blocks and `nop`.      **Edge Case**: Conditional pathways in `br_table`.

(assert_invalid
  (module
    (func $br_table_test
      (block
        (if (i32.const 1)
          (then 
            (nop)
            (br_table 0 (i32.const 0)))
          (else
            (nop)
            (br_table 0 (i32.const 0)))
        )
      )
    )
  )
  "type mismatch"
)